--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <groupId>com.axr.example</groupId>
     <artifactId>JavaExample</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <modules>
+        <module>JetcacheDemo</module>
+        <module>Example</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
