--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>JetcacheDemo</module>
         <module>Example</module>
+        <module>excercise</module>
     </modules>
 
     <properties>
